--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -31,13 +31,13 @@
   }
 
   .menu-nav {
-      height: 75vh;
+      height: 70vh;
       transform: translate3d(-100%, 0, 0);
       font-size: 24px;
   }
 
   .menu-branding {
-      height: 25vh;
+      height: 30vh;
       transform: translate(100%, 0, 0);
 
       .portrait {
@@ -47,6 +47,17 @@
           width: 200px;
           height: 200px; 
       }
+  }
+
+  .about-info {
+      grid-template-areas: 
+      'bio-image'
+      'bio'
+      'job-1'
+      'job-2'
+      'job-3';
+
+      grid-template-columns: 1fr;
   }
 }
 
