--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
 * {
     box-sizing: border-box;
@@ -49,7 +48,8 @@ header {
 
 main {
     padding: 4rem;
-    height: 100%;
+    // height: 100%;
+    min-height: calc(100vh - 60px);
 
     .icons {
         margin-top: 1rem;
@@ -72,3 +72,56 @@ main {
     }
     
 }
+
+#about img {
+    height: 200px;
+    width: 200px;
+}
+
+.about-info {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas: 
+    'bio-image bio bio'
+    'job-1 job-2 job-3';
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.bio-image {
+    grid-area: bio-image;
+    margin: auto;
+    border-radius: 50%;
+    border: solid 3px $secondary-color;
+}
+
+.bio {
+    grid-area: bio;
+    font-size: 1.2rem;
+}
+
+.job-1 {
+    grid-area: job-1;
+}
+
+.job-2 {
+    grid-area: job-2;
+}
+
+.job-3 {
+    grid-area: job-3;
+}
+
+.job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+}
+
+#main-footer {
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color, 10);
+    height: 60px;
+}
+
+@import 'mobile';
