--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,15 @@
 // Widescreens
 @include mediaXl {
-    
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 // Desktops and Laptops
 @include mediaLg {
-
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 // Tablets and Small Laptops
@@ -59,6 +63,10 @@
 
       grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+}
 }
 
 // Smartphones
@@ -66,4 +74,8 @@
   main#home h1 {
       margin-top: 10vh;
   }
+
+  .projects {
+    grid-template-columns:  1fr;
+}
 }
