--- a/scss/main.scss
+++ b/scss/main.scss
@@ -136,6 +136,35 @@ main {
     }
 }
 
+// Contact Page
+
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 1.3rem;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 1.5rem;
+        border: 3px #fff solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+         padding: 0.5rem 1.5rem;
+         background: $secondary-color;
+         color: #333;
+        span {
+            color: $secondary-color;
+            color: #333;
+        }
+        }
+    }
+}
+
 // Button Styles
 .btn {
     display: block;
